# test_CI

./: .dockerignore  .gitignore  .pre-commit-config.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  dbt_setup.sh  pyproject.toml  requirements.txt  tests_cli.py  up  validate_tables.py
.github/scripts/: update_pyproject_version.py
.github/workflow/: nesso_tests.yml
.github/workflows/: after_relase_action.yml  docker-image.yml  relase.yml  release-drafter.yml  release.yml  test.yml  test_action.yml  unit_test.yml
cli/: README.md  pyproject.toml  test_cli.py
cli/integra/: __init__.py  base_model.py  common.py  model.py  seed.py  source.py
cli/nesso/: __init__.py  base_model.py  model.py  seed.py  source.py
docker/: Dockerfile  compose.yml  setup
integra/: common.py  integra.py  source.py  test_cli.py
macros/: generate_base_model.sql  generate_model_yaml_boilerplate.sql  generate_seed_yaml_boilerplate.sql  generate_source_yaml_boilerplate.sql  get_source_pii_columns.sql  hash_source_pii_columns.sql
src/nesso/: __init__.py  base_model.py  common.py  model.py  nesso.py  seed.py  source.py
tests/: Dockerfile  average salary test.xlsx  conftest.py  dbt_setup.sh  docker-compose.yml  packages.yml  profiles.yml  pytest.ini  requirements.txt  setup.sh  test_base_model.py  test_common.py  test_model.py  test_seed.py  test_source.py  validate_tables.py
tests/dbt_projects/postgres/: dbt_project.yml  profiles.yml
tests/dbt_projects/trino/: dbt_project.yml  profiles.yml
tests/dbt_projects/trino/macros/: generate_base_model.sql  generate_model_yaml_boilerplate.sql  generate_source_yaml_boilerplate.sql  hash_source_pii_columns.sql
tests/localhost_profiles/: profiles.yml
