[project]
name = "nesso"
description = "A CLI tool for managing the nesso data platform."
readme = "README.md"
version = "0.5.55"
authors = [{ name="Michał Zawadzki", email="mzawadzki@dyvenia.com" }]
classifiers = ["Private :: Do Not Upload"]
keywords = ["cli", "dbt", "prefect", "datahub", "data"]
requires-python = ">=3.9, <4"
dependencies = [
  "typer[all] >=0.4.1, <0.5",
  "acryl-datahub[dbt] == 0.8.45",  # Must match DataHub server version.
  "dbt-postgres == 1.3.2",
  "prefect-viadot @ git+https://github.com/dyvenia/prefect-viadot.git",
  "oyaml >=1.0, <2.0",
  "loguru >=0.6.0, <1.0"
]

[project.optional-dependencies]
# databricks = ["prefect-viadot[databricks]"]
# redshift = ["prefect-viadot[redshift]"]
# all = ["nesso[databricks]", "nesso[redshift]"]
test = [
  "pytest >=7.1, <8.0",
  "pytest-cov >=3.0, <4",
  "coverage >=6.4, <7",
  "black >=22.6, <23",
  "genbadge >=1.1, <2",
  "mypy >=1.0, <2",
  "sqlalchemy >=1.4.46, <1.5",
  "faker >=16.6.1, <16.7",
  "getkey == 0.6.5",
  "pandas==1.5.3",
  "mock >=5.0.1, <5.1",
  "openpyxl >=3.0.10, <3.1",
  "oyaml >= 1.0, <1.1",
  "rich >=13.3, <13.4"
]
trino = ["dbt-trino == 1.3.2"]
all = ["nesso[test]"]

[project.scripts]
nesso = "nesso:cli"

[tool.setuptools]
packages = ["cli"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
