[project]
name = "integra"
authors = [{name = "Michał Zawadzki", email="mzawadzki@dyvenia.com"}]
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.9,<4"
dynamic = ["version", "description"]
dependencies = [
    "typer>=0.4.1,<0.5",
    "acryl-datahub==0.8.43"  # Must match DataHub server version.
]

[project.scripts]
integra = "integra:cli"

[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
dev = [
    "pytest >=7.1.2,<8",
    "pytest-cov >=3.0.0,<4",
    "coverage >=6.4.3,<7",
    # "mypy == 0.971",
    # "black >=22.6.0,<23.0.0",
    # "genbadge >= 1.1.0,<2"
]
# test = [
#     "databricks-connect >= 10.4.8,<10.5"
# ]